# toro_django_office

./: .editorconfig  .env.sample  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
authen/: forms.py  urls.py  views.py
authen/templates/authen/: authen_layout.html  login.html
authen/tests/: test_views.py
content/assets/css/: authen_style.css  common_style.css  custom_dropdown_style.css  layout_custom_style.css  style_dashboard.css  tagsinput.css
content/assets/css/common_pageview/: list_view.css
content/assets/js/: index.js  selectinput.js  vendor-all.min.js
content/assets/js/authentication/: login.js
content/assets/js/common_pageview/: SelectBoxCustom.js  SelectFilter2Custom.js  tabsURL.js
content/static/css/: style.css
content/static/js/: pcoded.min.js  tagsinput.js
core/: settings.py  urls.py
toro/: apps.py  urls.py  utils.py
toro/common/: table.py
toro/forms/: custom_fields.py  role.py
toro/models/: brand.py  user_profile.py  vendor.py
toro/templates/components/: detail_view.html  multiple_table_listview.html  table_listview.html
toro/templates/dashboard/: index.html
toro/templates/error_pages/: 403_page.html  404_page.html  500_page.html  vendor_required.html
toro/templates/layouts/: general_layout.html  general_layout_fullscreen.html  message.html  side_nav_bar.html  top_content.html  top_nav.html
toro/templates/role/: action_buttons.html  role_detail.html
toro/templatetags/: custom_fields.py  paginator_tags.py
toro/views/: __init__.py  common.py  role_management.py
(+9 files in other folders)
