[tool.poetry]
name = "toro-django-office"
version = "0.1.0"
description = ""
authors = ["KhaPhan <pttkha97@gmail.com>"]
readme = "README.md"
packages = [{include = "toro_django_office"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
beautifulsoup4 = "4.11.1"
click = "8.1.3"
dj-database-url = "0.5.0"
django = "3.2.14"
django-appconf = "1.0.5"
django-auditlog = "2.1.0"
django-bootstrap-pagination = "1.7.1"
django-bootstrap4 = "22.1"
django-compressor = "4.0"
django-compressor-toolkit = "0.6.0"
django-crispy-forms = "1.14.0"
django-filter = "22.1"
django-jsonfield = "1.4.1"
django-multi-email-field = "0.6.2"
django-tables2 = "2.4.1"
gunicorn = "20.1.0"
kml2geojson = "5.1.0"
mysqlclient = "2.1.0"
pillow = "9.2.0"
pycodestyle = "2.8.0"
python-dateutil = "2.8.2"
python-decouple = "3.6"
pytz = "2022.1"
rcssmin = "1.1.0"
rjsmin = "1.2.0"
six = "1.16.0"
soupsieve = "2.3.2.post1"
sqlparse = "0.4.2"
toml = "0.10.2"
unipath = "1.1"
whitenoise = "6.2.0"
coverage = "6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
